--- a/server/views/layouts/layout.ejs
+++ b/server/views/layouts/layout.ejs
@@ -4,13 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mybrary</title>
+    <title>Ensemble</title>
 </head>
 <body>
-    Before
     <br>
+    <%- include('../partials/header') %>
     <%- body %>
     <br>
-    After
 </body>
 </html>
