--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -55,17 +55,23 @@
 .menu--buttons{
   text-decoration: none;
   font-size: larger;
-  padding: 0px;
-  background-color: rgb(255, 255, 255);
-  max-width: fit-content;
-  border-radius: 30px;
-  padding: 10px;
-  margin-left: 40px;
+  margin-top: 20px;
+
 }
 
+
 .menu--buttons li {
-  margin: 0px 10px;
+  color: rgb(134, 34, 228);
+  background-color: rgb(255, 255, 255);
+  max-width: fit-content;
+  border-radius: 20px;
+  margin-left: 10px;
+  padding: 15px;
   display: inline;
+}
+
+.menu--buttons li:hover {
+  background-color: rgb(173, 173, 173);
 }
 
 .main-element {
@@ -78,4 +84,12 @@
 
 .home {
   color: white;
+}
+
+.account-icon {
+  margin-left: auto;
+  background-color: rgb(143, 112, 243);
+  max-width: fit-content;
+  border-radius: 15px;
+  padding: 15px;
 }
