--- a/frontend/src/components/ReviewForm.css
+++ b/frontend/src/components/ReviewForm.css
@@ -2,6 +2,9 @@
     /* background-color: rgb(145, 145, 150); */
     display: flex;
     background-color: rgb(240, 122, 122);
+    margin: 10px;
+    padding: 10px;
+    border-radius: 10px;
 }
 
 .hidden {
