--- a/frontend/src/pages/Account.css
+++ b/frontend/src/pages/Account.css
@@ -1,3 +1,22 @@
-* {
-    color: white;
+
+.auth-form {
+    margin-left: 25%;
+    margin-top: 5%;
+    border-radius: 10px;
+    padding: 30px;
+    display: grid;
+    width: 500px;
+    grid-template-rows: 100px 100px;
+    grid-column: 50px;
+    background-color: azure;
+    color: black;
+}
+
+.auth-form div {
+    margin-top: 10px;
+    color: black;
+}
+
+.auth-form a {
+    cursor: pointer;
 }
