--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -92,4 +92,10 @@
   max-width: fit-content;
   border-radius: 15px;
   padding: 15px;
+  
+}
+
+.account-icon a {
+  color: white;
+  padding-bottom: 30px;
 }
