--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -33,6 +33,8 @@
   }
 }
 
+
+
 .card {
   padding: 2em;
 }
@@ -44,7 +46,11 @@
 .menu {
   display: flex;
   align-items: center;
-  margin: 0px 20px;
+  margin: 0px 0px 30px 0px;
+  background-color: black;
+  padding: 8px 20px;
+  border-radius: 30px;
+  box-shadow: 0px 10px 31px 6px rgba(0,0,0,0.3);
 }
 
 .menu--title {
@@ -100,3 +106,49 @@
   padding-bottom: 10px;
 }
 
+.side-menu-btn {
+  display: none;
+  margin-left: auto;
+}
+
+.side-menu--buttons li {
+  font-size: x-large;
+  color: rgb(134, 34, 228);
+  padding: 15px;
+  text-decoration: none;
+  list-style-type: none;
+  background-color: #ffffff;
+  border-top: 1px solid black;
+  border-bottom: 1px solid black;
+  margin-top: -1px;
+}
+
+@media only screen and (max-width: 800px) {
+  #root {
+    padding: 0px;
+  }
+
+  .main-element {
+    min-width: 0;
+    width: 85vw;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .menu {
+    width: 85vw;
+  }
+
+  .side-menu--buttons {
+    padding: 0px;
+  }
+  .side-menu-btn {
+    display: block;
+  }
+
+  .menu--buttons,
+  .account-icon {
+    display: none;
+  }
+  
+}
