Fixed css bugs with mobile

--- a/frontend/src/components/ReviewWidget.css
+++ b/frontend/src/components/ReviewWidget.css
@@ -31,5 +31,19 @@ h2 {
     font-size: 20px;
 }
 
+@media only screen and (max-width: 800px) {
+    .review {
+      display: block;
+    }
 
+    .review--album-title {
+        font-size: 2em;
+        word-wrap: break-word;
+        margin-left: 10px;
+    }
+
+    .review--content {
+        margin: 0 auto;
+    }
+}
 
